Tue Jul 31 03:47:10 EDT 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/extra.c: fixed a serious proble is node-set was called
	  on a nodeset
	* tests//*/Makefile.am: fixed the rule to rebuild xsltproc

Lun Jul 30 05:47:43 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* libexslt/functions.c: fixed memory leaks
	
Sun Jul 29 08:37:59 EDT 2001 Daniel Veillard <daniel@veillard.com>

	* libexslt/functions.c libxslt/extensions.[ch] libxslt/extensions.h
	  libxslt/xslt.[hc] libxslt/xsltInternals.h xsltproc/xsltproc.c:
	  more cleanup of the problems introduced with EXSLT, also closes
	  bug #58180

Sat Jul 28 08:25:05 MDT 2001 John Fleck <jfleck@inkstain.net>

	* doc/internals.html - general cleanup

Fri Jul 27 04:00:38 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* configure.in tests/Makefile.am tests/exslt/*: added some tests
	  to check EXSLT conformance
	* libexslt/sets.c: fixed a typo when registering has-same-node

Fri Jul 27 12:33:52 EDT 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/extensions.c xsltproc/xsltproc.c: quick cleanup
	  of memory allocations, raise a bug in the test suite, also
	  need to be centralized as a single cleanup function.

Fri Jul 27 10:50:39 EDT 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.[ch]: applied changes from Tom Moog #58002
	* libexslt/functions.c libxslt/documents.c libxslt/extensions.c:
	  Some cleanup, there is still a memory leak left and some warnings
	  in libexslt.

Thu Jul 26 19:05:48 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* libxslt/extensions.[ch] libxslt/functions.[ch] libxslt/preproc.c
	  libxslt/transform.[ch] libxslt/variables.c libxslt/xslt.c 
	  libxslt/xsltInternals.h: new extension framework.
	  Added stylesheet module data, top-level and extension elements
	  precomputing, global registration of top-level elements and 
	  extension elements and functions.
	  Extensions are no longer initialized from extension-element-prefixes
	  declarations but when modules need the data.