@@ -75,6 +75,8 @@ dnl
 
 AC_CHECK_HEADERS(sys/types.h sys/time.h stdlib.h unistd.h string.h)
 AC_CHECK_HEADERS(ieeefp.h nan.h math.h fp_class.h float.h ansidecl.h)
+AC_CHECK_HEADERS(time.h)
+
 AC_CHECK_FUNC(isnan, , AC_CHECK_LIB(m, isnan,
   [M_LIBS="-lm"; AC_DEFINE(HAVE_ISNAN)]))
 
@@ -90,6 +92,7 @@ AC_CHECK_FUNC(floor, , AC_CHECK_LIB(m, pow,
 AC_CHECK_FUNC(fabs, , AC_CHECK_LIB(m, pow,
   [M_LIBS="-lm"; AC_DEFINE(HAVE_FABS)]))
 AC_CHECK_FUNCS(gettimeofday)
+AC_CHECK_FUNCS(mktime localtime asctime)
 
 dnl
 dnl Perl is just needed for generating some data for XSLtmark
