@@ -1,3 +1,8 @@
+Tue Jul 31 23:53:55 CEST 2001 Daniel Veillard <daniel@veillard.com>
+
+	* config.h.in configure.in libxslt/extra.c: tried to integrate
+	  Norm's implemntation of localTime()
+
 Tue Jul 31 03:47:10 EDT 2001 Daniel Veillard <daniel@veillard.com>
 
 	* libxslt/extra.c: fixed a serious proble is node-set was called
